<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="last_name">Last Name:</string>
    <string name="Speaksoft">Speaksoft</string>
    <string name="app_name">Rogo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="meet_nearby">Meet Nearby</string>
    <string name="meet_random">Meet Random</string>
    <string name="tips">Tips</string>
    <string name="meeting_someone">Meeting Someone</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="people_near_you">People Near You</string>
    <string name="titlebar_image">Title Bar Image</string>
    <string name="intro_logo_desc">Rogo logo</string>
    <string name="settings">Settings</string>
    <string name="user">USER</string>
    <string name="current_location">Current Location</string>

    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFF00</color>
    <color name="fuchsia">#FF00FF</color>
    <color name="red">#FF0000</color>
    <color name="silver">#C0C0C0</color>
    <color name="gray">#808080</color>
    <color name="olive">#808000</color>
    <color name="purple">#800080</color>
    <color name="maroon">#800000</color>
    <color name="aqua">#00FFFF</color>
    <color name="lime">#00FF00</color>
    <color name="teal">#008080</color>
    <color name="green">#008000</color>
    <color name="blue">#0000FF</color>
    <color name="navy">#000080</color>
    <color name="black">#000000</color>
    <color name="MediumBlue">#0000CD</color>

    <string name="active_string">Active</string>

    <color name="DeepSkyBlue">#00BFFF</color>

    <string-array name="radius_array">
        <item>100 ft</item>
        <item>250 ft</item>
        <item>500 ft</item>
        <item>1000 ft</item>
        <item>(&#189;) mile</item>
        <item>1 mile</item>
        <item>2 miles</item>
        <item>5 miles</item>
        <item>10 miles</item>
    </string-array>
    <string-array name="profile_page">
        <item>Username</item>
        <item>Points</item>
        <item>Email</item>
        <item>Interests</item>
    </string-array>

    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="radius_string">Contact Radius</string>
    <string name="desc">Rogo Logo</string>
    <string name="title_activity_near_you_map">NearYourMapActivity</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="title_activity_auth">Login</string>
    <string name="title_register_activity">Register</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_radius">Radius</string>
    <string name="pref_radius_summary">Set the radius</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="personalized_tips">Save a tip!</string>
    <string name="description">Rogo stock image.</string>
    <string name="burnt_toast">You forgot the toast!</string>
    <string name="self_improvement">New Tip Reminder +5 points!</string>

    <!-- Account Preferences -->
    <string name="title_fmt">Rogo</string>
    <string name="key1_action">Stuff</string>
    <string name="key1_summary">And things</string>

    <!-- Account Login XML -->
    <string name="auth_username">Email</string>
    <string name="auth_pass">Password</string>
    <string name="register">Register</string>
    <string name="auth_login">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="remember_me">Remember me</string>
    <string name="register_quest">Don\'t have a Rogo account? </string>
    <string name="SettingsText">Settings</string>
    <string name="recently_met">Recently Met</string>
    <string name="add_friend">Add Buddy </string>
    <string name="title_activity_send_request">SendRequestActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="requests_received">Requests Received</string>

</resources>