<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="50dip"
                android:gravity="center_horizontal"
                android:text="@string/Speaksoft"
                android:textColor="#454545"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/input_boxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_username"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/auth_txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/blue_border"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:id="@+id/txt_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_pass"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/auth_txt_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/blue_border"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/remember_me_check"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/remember_me"
                android:onClick="onRememberMe" />

            <!-- Login Form Ends -->

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:onClick="onSaveClick"
                    android:text="@string/auth_login" />

                <Button
                    android:id="@+id/on_Cancel_Click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_toRightOf="@+id/btnLogin"
                    android:onClick="onCancelClick"
                    android:text="@string/cancel_button" />

            </RelativeLayout>

            <Button
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dip"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:onClick="openRegisterScreen"
                android:text="@string/register"
                android:textColor="#0b84aa"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>