<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="top" 
    tools:context=".MainScreenActivity" >

    <Button
        android:id="@+id/tips_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/meet_random_button"
        android:layout_alignRight="@+id/meet_random_button"
        android:layout_below="@+id/meet_random_button"
        android:layout_marginTop="57dp"
        android:onClick = "refreshTipsButton"
        android:text="@string/tips" />
    
    <EditText 
        android:id="@+id/tips_edit_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/tips_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:imeActionLabel="onTextEnter"
        android:text="Add new tip"
        android:inputType="textCapSentences"
        android:ems="6"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/near_you_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="openNearYouScreen"
        android:text="@string/meet_nearby" />

    <Button
        android:id="@+id/meet_random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tips_edit_box"
        android:layout_below="@+id/near_you_button"
        android:layout_marginTop="42dp"
        android:onClick="refreshMeetRandomButton"
        android:text="@string/meet_random" />

    <Button
        android:id="@+id/debug_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_edit_box"
        android:layout_centerHorizontal="true"
        android:onClick="openDebugScreen"
        android:text="DEBUG" />

    <TextView
        android:id="@+id/textUserSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_edit_box"
        android:layout_toLeftOf="@+id/tips_edit_box"
        tools:context=".MainActivity" />

</RelativeLayout>